[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersonic"                # PyPI project name
version = "0.1.0"
description = "Generate structured EDA notebooks from datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Krish Ambady" }]
keywords = ["EDA", "notebook", "pandas", "matplotlib", "sqlite"]
dependencies = [
  "nbformat>=5.0.0",
  "pandas>=1.5.0",
  "matplotlib>=3.6.0",
  "numpy>=1.23.0",
  "requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/UnniAmbady/Hypersonic_EDA"
Issues = "https://github.com/UnniAmbady/Hypersonic_EDA/issues"

[project.scripts]
hypersonic = "hypersonic.cli:main"

# Make sure the package folder is picked up
[tool.setuptools.packages.find]
include = ["hypersonic*"]
