[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypersonic"
version = "0.1.0"
description = "Generate structured EDA notebooks from datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Krish Ambady" }]
keywords = ["EDA", "notebook", "pandas", "matplotlib", "sqlite"]
dependencies = [
  "nbformat>=5.0.0",
  "pandas>=1.5.0",
  "matplotlib>=3.6.0",
  "numpy>=1.23.0",
  "requests>=2.28.0"
]

[project.urls]
Homepage = "https://github.com/UnniAmbady/Hypersonic_EDA"
Issues   = "https://github.com/UnniAmbady/Hypersonic_EDA/issues"

# Console command: `hypersonic`
# (Points to your existing module; no cli.py required)
[project.scripts]
hypersonic = "hypersonic.notebook_builder:main"

# Ensure the package folder is included
[tool.setuptools.packages.find]
include = ["hypersonic*"]
